// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Alert danger renders correctly 1`] = `
<div
  class="alert alert-danger alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert dark renders correctly 1`] = `
<div
  class="alert alert-dark alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert info renders correctly 1`] = `
<div
  class="alert alert-info alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert light renders correctly 1`] = `
<div
  class="alert alert-light alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert primary renders correctly 1`] = `
<div
  class="alert alert-primary alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert renders correctly without animation for the close button 1`] = `
<div
  class="alert alert-primary alert-dismissible"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert renders correctly without close button 1`] = `
<div
  class="alert alert-primary fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
</div>
`;

exports[`OE - Alert secondary renders correctly 1`] = `
<div
  class="alert alert-secondary alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert success renders correctly 1`] = `
<div
  class="alert alert-success alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;

exports[`OE - Alert warning renders correctly 1`] = `
<div
  class="alert alert-warning alert-dismissible fade show"
  role="alert"
>
  <h4
    class="alert-heading"
  >
    Alert heading
  </h4>
  A simple alert. check it out!
  <button
    aria-label="Close"
    class="btn-close"
    data-bs-dismiss="alert"
    type="button"
  />
</div>
`;
